# cldcb

./: .gitignore  .travis.yml  COPYING  Makefile.am  PROTOCOL.md  README.md  configure.ac
client/: .gitignore  Makefile.am  README.md  client.cpp  configure.ac  optfile-example  plugin.cpp  test_ld_checkmessage.cpp  test_ld_logger.cpp  test_ld_writer.cpp  test_optfile.cpp  test_optfile_parse.cpp  test_queue_talker.cpp
client/Client/: NewClient.cpp  NewClient.hpp  recognize_code.cpp  recognize_code.hpp
client/LD/: DbWrite.hpp  Logger.cpp  Logger.hpp  Rpc.hpp  Writer.cpp  Writer.hpp  checkmessage.cpp  checkmessage.hpp
client/Plugin/: DbFileReader.cpp  DbFileReader.hpp  DbWriteHandler.cpp  DbWriteHandler.hpp  Main.cpp  Main.hpp  MainLoop.cpp  MainLoop.hpp  OptHandler.cpp  OptHandler.hpp  ServerIf.hpp  ServerIncrementIf.hpp  ServerResult.hpp  ServerReuploadIf.hpp  ServerSpec.hpp  Setup.hpp  make_net_connector.cpp  make_net_connector.hpp
client/Plugin/OptFile/: load.cpp  load.hpp  parse.cpp  parse.hpp  translate_setup.cpp  translate_setup.hpp  validate_keys.cpp  validate_keys.hpp
client/Plugin/Single/: Server.cpp  Server.hpp  ServerIncrement.cpp  ServerIncrement.hpp  ServerReupload.cpp  ServerReupload.hpp  create.cpp  create.hpp
client/Secp256k1/: Context.cpp  Context.hpp  G.cpp  G.hpp  PrivKey.cpp  PrivKey.hpp  PubKey.cpp  PubKey.hpp  Random.hpp
client/ServerTalker/: Handshaker.cpp  Handshaker.hpp  Messenger.cpp  Messenger.hpp  MessengerIf.hpp  Thread.cpp  Thread.hpp  connect_then_handshake.cpp  connect_then_handshake.hpp  rw.cpp  rw.hpp
client/ServerTalker/Detail/: DePinger.cpp  DePinger.hpp  QueueTalker.cpp  QueueTalker.hpp
common/: Main.cpp  Main.hpp  Makefile.am  S.hpp  test_crypto_box.cpp  test_fork_test.cpp  test_jsmn.cpp  test_logger.cpp  test_net.cpp  test_noise.cpp  test_read_line.cpp  test_secp256k1.cpp  test_secret.cpp  test_serialize.cpp  test_sha256.cpp  test_sync.cpp
common/Crypto/: Secret.cpp  Secret.hpp
common/Crypto/Box/: Sealer.cpp  Sealer.hpp  Unsealer.cpp  Unsealer.hpp
common/Crypto/Box/Detail/: Nonce.hpp
common/Jsmn/: Object.cpp  Object.hpp  Parser.cpp  Parser.hpp  jsonify_string.hpp
common/Jsmn/Detail/: EndAdvancer.cpp  EndAdvancer.hpp  ParseResult.hpp  Str.cpp  Str.hpp  Token.hpp  Type.hpp
common/Net/: Connector.hpp  DirectConnector.cpp  DirectConnector.hpp  Fd.cpp  Fd.hpp  Listener.cpp  Listener.hpp  ProxyConnector.cpp  ProxyConnector.hpp  SocketFd.cpp  SocketFd.hpp  make_nonblocking.cpp  make_nonblocking.hpp  socketpair.cpp  socketpair.hpp  unixsocket.cpp  unixsocket.hpp
common/Net/Detail/: AddrInfoReleaser.hpp
common/Noise/: Encryptor.cpp  Encryptor.hpp  Initiator.cpp  Initiator.hpp  Responder.cpp  Responder.hpp
common/Noise/Detail/: Aead.cpp  Aead.hpp  CipherState.cpp  CipherState.hpp  Encryptor.cpp  Encryptor.hpp  HS.cpp  HS.hpp  hkdf2.cpp  hkdf2.hpp
common/Protocol/: MID.hpp  Message.hpp
common/Secp256k1/: Context.cpp  Context.hpp  G.hpp  KeyPair.hpp  PrivKey.cpp  PrivKey.hpp  PubKey.cpp  PubKey.hpp  Random.cpp  Random.hpp  Signature.cpp  Signature.hpp  ecdh.cpp  ecdh.hpp
common/Secp256k1/Detail/: context.hpp
common/Sha256/: Hash.cpp  Hash.hpp  fun.cpp  fun.hpp  hkdf.cpp  hkdf.hpp  hmac.cpp  hmac.hpp
common/Stream/: Sink.hpp  SinkSource.hpp  Source.hpp  read_line.cpp  read_line.hpp
common/Sync/: MVar.hpp
common/Util/: Logger.cpp  Logger.hpp  Str.cpp  Str.hpp  TermLogger.cpp  TermLogger.hpp  fork_test.cpp  fork_test.hpp  make_unique.hpp
integration/: Makefile.am  test_db_write.cpp  test_handshake.cpp  test_messenger.cpp
server/: .gitignore  Makefile.am  STORAGE.md  daemonize.cpp  daemonize.hpp  server.cpp  test_archive_abort.cpp  test_backup_storage.cpp  test_footer.cpp  test_io_leak.cpp
server/Archive/: DataStorageImpl.cpp  DataStorageImpl.hpp  FileNamer.cpp  FileNamer.hpp  FooterJudge.cpp  FooterJudge.hpp  IncrementalAppend.cpp  IncrementalAppend.hpp  IncrementalOnlySequence.hpp  IncrementalThenReuploadSequence.cpp  IncrementalThenReuploadSequence.hpp  IncrementalWriter.cpp  IncrementalWriter.hpp  Reader.cpp  Reader.hpp  RecognitionStorageImpl.cpp  RecognitionStorageImpl.hpp  ReuploadSequence.cpp  ReuploadSequence.hpp  ReuploadWriter.cpp  ReuploadWriter.hpp  StorageImpl.hpp  Unlinker.cpp  Unlinker.hpp
server/Backup/: ConnectionLoop.cpp  ConnectionLoop.hpp  DataReader.hpp  DataStorage.cpp  DataStorage.hpp  IncrementalStorage.hpp  PingPongMessenger.cpp  PingPongMessenger.hpp  RecognitionStorage.hpp  RequestBackupData.cpp  RequestBackupData.hpp  RequestIncremental.cpp  RequestIncremental.hpp  RequestRecognitionCodes.cpp  RequestRecognitionCodes.hpp  ReuploadStorage.hpp  ServiceLoop.cpp  ServiceLoop.hpp  StorageIf.hpp
server/Daemon/: AcceptHandler.cpp  AcceptHandler.hpp  AcceptLoop.cpp  AcceptLoop.hpp  Breaker.cpp  Breaker.hpp  ClientAllow.hpp  ClientList.cpp  ClientList.hpp  Connection.cpp  Connection.hpp  ConnectionHandshaker.cpp  ConnectionHandshaker.hpp  ConnectionLoop.hpp  IoResult.hpp  KeyKeeper.cpp  KeyKeeper.hpp  Main.cpp  Main.hpp  Messenger.cpp  Messenger.hpp  PidFiler.cpp  PidFiler.hpp
server/Ev/: Io.hpp  Join.cpp  Join.hpp  Semaphore.cpp  Semaphore.hpp  ThreadPool.cpp  ThreadPool.hpp  concurrent.cpp  concurrent.hpp  now.cpp  now.hpp  start.cpp  start.hpp  wait_io.cpp  wait_io.hpp  wait_readable.cpp  wait_readable.hpp  yield.cpp  yield.hpp
server/Server/: Add.cpp  Add.hpp  AddRemove.cpp  AddRemove.hpp  Daemon.cpp  Daemon.hpp  Logger.cpp  Logger.hpp  OptionsHandler.cpp  OptionsHandler.hpp  Stop.cpp  Stop.hpp  TermLogger.cpp  TermLogger.hpp  change_clients.cpp  change_clients.hpp  send_signal.cpp  send_signal.hpp
